objects/Positions__c.object
<CustomObject>
    <label>Positions</label>
    <nameField>
        <label>Positions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Position</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Open-Approved</fullName>
                </value>
                <value>
                    <fullName>Closed-Filled</fullName>
                </value>
                <value>
                    <fullName>Closed-Not Approved</fullName>
                </value>
                <value>
                    <fullName>Closed-Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Functional_Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FN-100</fullName>
                </value>
                <value>
                    <fullName>FN-200</fullName>
                </value>
                <value>
                    <fullName>FN-300</fullName>
                </value>
                <value>
                    <fullName>HR-100</fullName>
                </value>
                <value>
                    <fullName>HR-200</fullName>
                </value>
                <value>
                    <fullName>HR-300</fullName>
                </value>
                <value>
                    <fullName>SD-100</fullName>
                </value>
                <value>
                    <fullName>SD-200</fullName>
                </value>
                <value>
                    <fullName>SD-300</fullName>
                </value>
                <value>
                    <fullName>RO-100</fullName>
                </value>
                <value>
                    <fullName>RO-200</fullName>
                </value>
                <value>
                    <fullName>RO-300</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day_s_Open__c</fullName>
        <formula>NOW()  -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day&apos;s Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <formula>IF(  ISPICKVAL( Status__c , &quot;Closed-Filled&quot;) ||
ISPICKVAL( Status__c , &quot;Closed-Not Approved&quot;)||
ISPICKVAL( Status__c , &quot;Closed-Canceled&quot;) ,  TODAY(), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compensation__c</fullName>
        <label>Compensation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Position_Name__c</fullName>
        <label>Position Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resource</fullName>
                </value>
                <value>
                    <fullName>Retail Operations</fullName>
                </value>
                <value>
                    <fullName>Software Developer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Describtion__c</fullName>
        <label>Job Describtion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Programming_Languages__c</fullName>
        <label>Programming Languages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>JavaScript</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
                <value>
                    <fullName>LWC</fullName>
                </value>
                <value>
                    <fullName>C Language</fullName>
                </value>
                <value>
                    <fullName>HTML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>position_requires_travel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>position requires travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skills_Required_for_each_language__c</fullName>
        <label>Skills Required for each language</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Programming_Languages__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trigger</fullName>
                </value>
                <value>
                    <fullName>LWC</fullName>
                </value>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>Class</fullName>
                </value>
                <value>
                    <fullName>Method</fullName>
                </value>
                <value>
                    <fullName>React</fullName>
                </value>
                <value>
                    <fullName>Nod</fullName>
                </value>
                <value>
                    <fullName>GitHub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>IT_Positions</fullName>
        <active>true</active>
        <label>IT Positions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Position</fullName>
        <active>true</active>
        <label>Standard Position</label>
    </recordTypes>
    <validationRules>
        <fullName>Minimum_Pay</fullName>
        <active>true</active>
        <description>Min pay should not exceed Max pay</description>
        <errorConditionFormula>Compensation__c  &lt;= 85000  ||  Compensation__c  &gt; 200000</errorConditionFormula>
        <errorMessage>Min pay should not exceed Max pay</errorMessage>
    </validationRules>
</CustomObject>